Polynomial class start

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 Primes and number theory/Miller_Rabin_primality_test.exe
 .vscode/tasks.json
+.vscode/settings.json
+Polynomials/Poly_test.exe
+Polynomials/Poly_test.cpp
