--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ Polynomials/Poly_test.exe
 Polynomials/Poly_test.cpp
 Fractions/Fractions_test.cpp
 Fractions/Fractions_test.exe
+Number field of prime order/Number_field_test.cpp
+Number field of prime order/Number_field_test.exe
