--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 Primes and number theory/Miller_Rabin_primality_test.exe
 .vscode/tasks.json
 .vscode/settings.json
-Polynomials/Poly_test.exe
-Polynomials/Poly_test.cpp
 Fractions/Fractions_test.cpp
 Fractions/Fractions_test.exe
 Number field of prime order/Number_field_test.cpp
 Number field of prime order/Number_field_test.exe
+Poly_test.cpp
+Poly_test.exe
